First module finished

--- a/app/index.html
+++ b/app/index.html
@@ -33,18 +33,25 @@
 	<script src="app.js"></script>
 
 	<!-- DIRECTIVES -->
-	<script src="modules/menu/fabMenu.js"></script>
+	<script src="modules/menu/carshelMenu.js"></script>
 
 	<!-- FACTORIES and SERVICES -->
 	<script src="modules/imageToBase64/imageToBase64.js"></script>
+	<script src="modules/firebaseAuth/auth.js"></script>
 
 	<!-- CLASSES -->
-	<script src="./states/upload/car.class.js"></script>
+	<script src="./classes/user.class.js"></script>
+	<script src="./classes/car.class.js"></script>
 
 
 	<!-- CONTROLLERS -->
+	<script src="./states/login/loginModel.js"></script>
 	<script src="./states/login/loginController.js"></script>
-	<script src="./states/swipe/swipeController.js"></script>
+
+	<script src="./states/dashboard/dashboardController.js"></script>
+	<script src="./states/dashboard/dashboardModel.js"></script>
+
 	<script src="./states/upload/uploadController.js"></script>
+	<script src="./states/upload/uploadModel.js"></script>
 
 </html>
